在事故单中应用事故单分类与子分类

--- a/config/locales/icm/en.yml
+++ b/config/locales/icm/en.yml
@@ -146,6 +146,8 @@ en:
   label_icm_incident_request_upgrade: Upgrade
   label_icm_incident_status_edit_transform: Edit Status Transform
   label_icm_incident_request_relation: Related Requests
+  label_icm_incident_request_incident_category: Category
+  label_icm_incident_request_incident_sub_category: Subcategory
   #========================= end icm incident_requests_controller=======================#
   #=========================    icm incident_journals_controller=======================#
   label_icm_incident_reply_support_group_id: Referred group
