--- a/config/locales/icm/zh.yml
+++ b/config/locales/icm/zh.yml
@@ -232,6 +232,8 @@ zh:
   label_icm_incident_category_name: 名称
   label_icm_incident_category_external_system: 系统
   label_icm_incident_category_description: 描述
+  label_icm_incident_category_apply_system: 可应用系统
+  label_icm_incident_category_system: 应用系统可使用事故类别
   #========================== end incident category  ===============================
   #========================= incident category ====================================
   label_icm_incident_sub_category: 事故单子分类
