--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -273,9 +273,17 @@ zh:
   #=========reports===================
   label_average: 平均
   label_summary: 总计
+  label_report_type: 类型
+  label_report_year: 年份
+  label_report_month: 月份
+  label_report_date: 日期
   ##==============report incident_elapse=============================
   label_report_incident_elapse_show_options: 统计选项
   label_report_incident_elapse_show_all: 支持组和状态
   label_report_incident_elapse_show_support_group: 支持组
   label_report_incident_elapse_show_status: 状态
+  ##==============report knowledge use=============================
+  label_report_knowledge_use_show: 查看知识次数
+  label_report_knowledge_use_apply: 使用知识次数
+
   #=========end reports===================
