添加变更单状态

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -87,6 +87,7 @@ en:
   status: Status
   no_data: No data for this entity
   label_alias: " Alias"
+  code: Code
   #usual words
   notice_account_invalid_creditentials: User or Password Error
   successfully_updated: Successfully Updated
