添加变更单优先级

--- a/config/locales/chm/zh.yml
+++ b/config/locales/chm/zh.yml
@@ -18,20 +18,35 @@ zh:
   label_chm_change_urgency_edit: 编辑变更紧急度
   label_chm_change_urgency_show: 查看
   label_chm_change_urgency_code: 编码
+  label_chm_change_urgency_weight_values: 权重
   label_chm_change_urgency_name: 名称
   label_chm_change_urgency_description: 描述
   label_chm_change_urgency_display_sequecne: 显示顺序
   label_chm_change_urgency_default_flag: 默认
   #========================= end change urgencies ==================================
-  #========================= change urgencies =========================
+  #========================= change impacts =========================
   label_chm_change_impact: 变更影响度
   label_chm_change_impact_list: 变更影响度列表
   label_chm_change_impact_new: 新建变更影响度
   label_chm_change_impact_edit: 编辑变更影响度
   label_chm_change_impact_show: 查看
   label_chm_change_impact_code: 编码
+  label_chm_change_impact_weight_values: 权重
   label_chm_change_impact_name: 名称
   label_chm_change_impact_description: 描述
   label_chm_change_impact_display_sequecne: 显示顺序
   label_chm_change_impact_default_flag: 默认
-  #========================= end change urgencies ==================================
+  #========================= end change impacts ==================================
+  #========================= change priorities =========================
+  label_chm_change_priority: 变更影响度
+  label_chm_change_priority_list: 变更影响度列表
+  label_chm_change_priority_new: 新建变更影响度
+  label_chm_change_priority_edit: 编辑变更影响度
+  label_chm_change_priority_show: 查看
+  label_chm_change_priority_code: 编码
+  label_chm_change_priority_weight_values: 权重
+  label_chm_change_priority_name: 名称
+  label_chm_change_priority_description: 描述
+  label_chm_change_priority_display_sequecne: 显示顺序
+  label_chm_change_priority_default_flag: 默认
+  #========================= end change priorities ==================================
