--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -140,6 +140,7 @@ en:
   list_mode: List
   error_file_upload_limit: File beyond the limit(Limit %{m} Kb, Now %{n} Kb)
   error_file_upload_limit_shot: File beyond the limit(Limit %{m} Kb, Now _ Kb)
+  error_file_upload_repeat: Some files upload repeated.
   file_upload_limit_alert: File limit %{m} KB
   by_name: By name
   by_date: By date
