feature: 运维人员通过“应用”知识项回复用户时 应该添加一句“请参考以下知识项”。

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -31,6 +31,8 @@ en:
   close: Close
   copy:  Copy
   operation: Options
+  content: Content
+  link: Link
   save_and_new: Save And New
   save_and_update_new: Save And Upload
   multilingual: Multilingual
