--- a/config/locales/skm/en.yml
+++ b/config/locales/skm/en.yml
@@ -143,3 +143,4 @@ en:
   label_action_new_from_icm_request: Create Knowledge From Incident Request
   button_skm_entry_header_new: New Knowledge Entry
   tip_skm_entry_header_full_search: Search knowledges title, content...
+  label_skm_entry_header_reference: Reference
