--- a/config/locales/skm/zh.yml
+++ b/config/locales/skm/zh.yml
@@ -147,3 +147,4 @@ zh:
 
   button_skm_entry_header_new: 新建知识
   tip_skm_entry_header_full_search: 搜索知识库文章标题、内容...
+  label_skm_entry_header_reference: 请参考以下知识项
