--- a/config/locales/chm/zh.yml
+++ b/config/locales/chm/zh.yml
@@ -92,10 +92,55 @@ zh:
   label_chm_change_plan_type_edit: 编辑变更计划类型
   label_chm_change_plan_type_show: 查看
   label_chm_change_plan_type_code: 编码
-  label_chm_change_plan_type_weight_values: 权重
   label_chm_change_plan_type_name: 名称
   label_chm_change_plan_type_description: 描述
   label_chm_change_plan_type_display_sequecne: 显示顺序
   label_chm_change_plan_no_body: 无计划内容
   label_chm_change_plan: 变更计划
   #========================= end change plan types ==================================
+  #========================= change task phase =========================
+  label_chm_change_task_phase: 变更任务阶段
+  label_chm_change_task_phase_list: 变更任务阶段列表
+  label_chm_change_task_phase_new: 新建变更任务阶段
+  label_chm_change_task_phase_edit: 编辑变更任务阶段
+  label_chm_change_task_phase_show: 查看
+  label_chm_change_task_phase_code: 编码
+  label_chm_change_task_phase_name: 名称
+  label_chm_change_task_phase_description: 描述
+  label_chm_change_task_phase_display_sequecne: 显示顺序
+  #========================= end change task phase ==================================
+  #========================= change task template =========================
+  label_chm_change_task_template: 变更任务模板
+  label_chm_change_task_template_list: 变更任务模板列表
+  label_chm_change_task_template_new: 新建变更任务模板
+  label_chm_change_task_template_edit: 编辑变更任务模板
+  label_chm_change_task_template_show: 查看
+  label_chm_change_task_template_code: 编码
+  label_chm_change_task_template_name: 名称
+  label_chm_change_task_template_description: 描述
+  #========================= end change task template ==================================
+  #========================= change template task =========================
+  label_chm_change_request_task: 任务
+  label_chm_change_task_new: 新建任务
+  label_chm_change_task_edit: 编辑任务
+  label_chm_change_task: 任务
+  label_chm_change_template_task: 模板任务
+  label_chm_change_task_name: 名称
+  label_chm_change_task_support_group: 支持组
+  label_chm_change_task_support_person: 支持人员
+  label_chm_change_task_status: 状态
+  label_chm_change_task_description: 描述
+  label_chm_change_task_message: 备注
+  label_chm_change_task_plan_start_date: 计划开始时间
+  label_chm_change_task_plan_end_date: 计划结束时间
+  label_chm_change_task_start_date: 开始时间
+  label_chm_change_task_end_date: 结束时间
+  label_chm_change_task_change_task_phase: 任务阶段
+  label_chm_change_task_template_new: 从模板添加任务
+  label_chm_change_task_change_task_template: 任务模板
+  label_chm_change_task_depends: 依赖任务
+  #========================= end change template task ==================================
+
+
+
+
