--- a/config/locales/icm/zh.yml
+++ b/config/locales/icm/zh.yml
@@ -147,7 +147,7 @@ zh:
   label_icm_incident_request_relation: 相关事故单
   label_icm_incident_request_incident_category: 分类
   label_icm_incident_request_incident_sub_category: 子分类
-  label_icm_create_relate_change_request: 创建相关变更单
+  label_icm_create_relate_change_request: 创建RFC
   #========================= end icm incident_requests_controller=======================#
   #=========================    icm incident_journals_controller=======================#
   label_icm_incident_reply_support_group_id: 转交组
