修改事故单显示页面与变更单显示页面.修改变更单页面添加关联事故单的方式,使用LOV添加.

--- a/config/locales/chm/zh.yml
+++ b/config/locales/chm/zh.yml
@@ -86,6 +86,7 @@
   label_chm_change_request_tab_approve: 审批
   label_chm_change_request_tab_implement: 实施
   label_chm_change_request_incident_requests: 关联事故单
+  label_chm_change_request_reply: 回复历史
   #========================= end change priorities ==================================
   #========================= change plan types =========================
   label_chm_change_plan_type: 变更计划类型
