修改调查问卷的新建编辑界面

--- a/config/locales/csi/zh.yml
+++ b/config/locales/csi/zh.yml
@@ -5,19 +5,18 @@ zh:
    label_csi_survey_company: 公司名称
    label_csi_survey_title: 问卷名称
    label_csi_survey_description: 描述
-   label_csi_survey_email_notify: 是否Email提醒
-   label_csi_survey_notify_url: 提醒的URL地址
-   label_csi_survey_notify_type: 提醒类型
-   label_csi_survey_thanks_message: 感谢
-   label_csi_survey_publish_response: 是否公开结果
+   label_csi_survey_notify_flag: 是否Email提醒
+   label_csi_survey_end_message: 感谢词
+   label_csi_survey_publish_result_flag: 是否公开结果
    label_csi_survey_comment_flag: 是否可以评论
    label_csi_survey_password: 密码
    label_csi_survey_please_input: 请输入密码
-   label_csi_survey_closed_datetime: 关闭时间
+   label_csi_survey_close_date: 关闭时间
    label_csi_survey_same_ip_allow_flag: 同一个IP是否允许重复提交
    label_csi_survey_status_code: 记录状态
-   label_csi_survey_setting: 事故单设置
-   label_csi_survey_due_dates: 到期时间(小时)
+   label_csi_survey_incident_setting: 事故单关联设置
+   label_csi_survey_incident_flag: 在事故单中启用
+   label_csi_survey_time_limit: 调查问卷时限(小时)
    info_csi_survey_due_dates: 在这个时间之前提交的事故单，会给提单人创建该调查问卷
    label_csi_survey_access_control: 访问控制
    label_csi_survey_edit: 编辑调查问卷
@@ -41,7 +40,6 @@ zh:
    label_csi_survey_created_at: 发起时间
    label_csi_survey_created_by: 发起人
    label_csi_survey_result_only_author: 只允许作者查看调查结果
-   label_csi_survey_with_incident_request: 在所有事故单中显示
    info_csi_survey_some_enabled_can_not_be_change: 已经有用户参与调查，导致该项不能被修改
    label_csi_survey_incident_request_from: 事故单创建日期从
    label_csi_survey_incident_request_to: 到
@@ -66,12 +64,12 @@ zh:
    label_csi_survey_subject_prompt: 提示
    label_csi_survey_subject_input_type: 输入类型
    label_csi_survey_users_short_answer: 用户回答
-   text: 单行文本
-   paragraph_text: 大段文本
-   multi_choice: 单选题
-   checkboxes: 多选题
-   choose_from_a_list: 下拉列表
-   page_break: 分页符
+   label_csi_survey_subject_type_text: 单行文本
+   label_csi_survey_subject_type_paragraph_text: 大段文本
+   label_csi_survey_subject_type_multi_choice: 单选题
+   label_csi_survey_subject_type_checkboxes: 多选题
+   label_csi_survey_subject_type_choose_from_a_list: 下拉列表
+   label_csi_survey_subject_type_page_break: 分页符
    label_csi_survey_subject_seq_num: 题目顺序
    label_csi_survey_subject_users_long_answer: 用户较长的回答
    label_csi_survey_subjects_add_other: 允许用户填写其它选择
