显示调查问卷调查结果

--- a/config/locales/csi/zh.yml
+++ b/config/locales/csi/zh.yml
@@ -121,3 +121,4 @@ zh:
    label_csi_survey_result_show_more: 查看答案
    label_csi_survey_response_text_input: 填写值
    label_csi_survey_result_show_input: 用户填写值
+   label_csi_survey_result_list: 调查问卷填写列表
