--- a/config/locales/skm/zh.yml
+++ b/config/locales/skm/zh.yml
@@ -70,6 +70,16 @@ zh:
   label_action_new_step_4: 新建, 步骤3
   remove_from_favorite: 移除收藏
   error_skm_entry_detail_can_not_blank: 该内容为必输，不能为空
+  notice_skm_entry_step_type_select_desc: 知识内容可以是一篇文章，或者是一段录像。在这里选择您要创建的知识类型。
+  notice_skm_entry_step_type_select: 选择知识类型
+  label_skm_entry_type: 知识类型
+  notice_skm_entry_step_video_upload: 上传视频
+  notice_skm_entry_step_video_upload_desc: 上传一段视频作为知识内容。
+  label_skm_entry_video: 上传知识视频
+  label_skm_entry_create_article: 文本知识
+  label_skm_entry_create_video: 视频知识
+  label_skm_entry_video_new: 创建视频知识
+
   #=========================skm FileManagement================================
   label_skm_file_management: 文件管理
   label_skm_file_list: 文件列表
