--- a/config/locales/skm/zh.yml
+++ b/config/locales/skm/zh.yml
@@ -79,7 +79,11 @@ zh:
   label_skm_entry_create_article: 文本知识
   label_skm_entry_create_video: 视频知识
   label_skm_entry_video_new: 创建视频知识
-
+  label_skm_navigator: 导航目录
+  label_action_video_show: 查看知识录像
+  label_skm_entry_source_video_name: 现有视频文件名
+  label_skm_entry_source_video_desc: 上传的新视频文件，将会覆盖现有视频。
+  label_skm_entry_video_edit: 编辑视频知识
   #=========================skm FileManagement================================
   label_skm_file_management: 文件管理
   label_skm_file_list: 文件列表
