--- a/config/locales/skm/en.yml
+++ b/config/locales/skm/en.yml
@@ -83,6 +83,7 @@ en:
   label_skm_entry_source_video_name: Existing Video Name
   label_skm_entry_source_video_desc: Existing video will be replaced by the new one.
   label_skm_entry_video_edit: Edit knowledge video
+  label_skm_entry_video_upload_error: Video must be uploaded.
   #=========================skm FileManagement================================
   label_skm_file_management: Files
   label_skm_file_list: Files List
