--- a/config/locales/skm/zh.yml
+++ b/config/locales/skm/zh.yml
@@ -84,6 +84,7 @@ zh:
   label_skm_entry_source_video_name: 现有视频文件名
   label_skm_entry_source_video_desc: 上传的新视频文件，将会覆盖现有视频。
   label_skm_entry_video_edit: 编辑视频知识
+  label_skm_entry_video_upload_error: 必须上传视频文件
   #=========================skm FileManagement================================
   label_skm_file_management: 文件管理
   label_skm_file_list: 文件列表
