--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1614,3 +1614,17 @@ en:
   label_irm_mail_smtp_username_tip: The username used to authenticate your SMTP account.
   label_irm_mail_smtp_password_tip: The password for your SMTP account.
   #========================= end ==================================
+
+  #======================= Portlets ====================
+  label_irm_portlet: Portlet
+  label_irm_portlet_new: New Portlet
+  label_irm_portlet_code: Code
+  label_irm_portlet_controller: Controller Name
+  label_irm_portlet_action: Request Action
+  label_irm_portlet_default_flag: Default Show
+  portlet_default_flag_yes: Yes
+  portlet_default_flag_no: No
+  label_irm_portlet_list: Portlet List
+  label_irm_portlet_name: Name
+  label_irm_portlet_description: Description
+  #======================= end Portlets====================
