feature: 将系统错误界面原为一个固定的图片， 开发为，报错文字信息可在全局设置中配置。

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -292,6 +292,7 @@ en:
   label_irm_global_setting_upload_file_limit: Upload File Size Limit(KB)
   label_irm_global_setting_logo: Logo
   recommended_size: Recommended Resolution
+  label_irm_global_setting_error_page_info: Error Page Info
   #=========================    end global_settings_controller=======================#
   #=========================    irm auth_sources_controller=======================#
   label_irm_auth_source_name: Name
